# cometvisu-knxd-fcgi

./: .clang-tidy  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md
mocks/: CMakeLists.txt  mock_knxd_socket.cpp  mock_knxd_socket.h
src/: CMakeLists.txt  main.cpp  version.cpp  version.h
src/fcgi/: fcgi_request.cpp  fcgi_request.h  fcgi_server.cpp  fcgi_server.h
src/handlers/: login_handler.cpp  login_handler.h  read_handler.cpp  read_handler.h  write_handler.cpp  write_handler.h
src/knxd/: knxd_client.cpp  knxd_client.h  knxd_connector.cpp  knxd_connector.h  knxd_protocol.cpp  knxd_protocol.h
src/router/: router.cpp  router.h
src/state/: address_cache.cpp  address_cache.h  group_cache.cpp  group_cache.h  long_poll.cpp  long_poll.h  session_store.cpp  session_store.h  shared_group_cache.cpp  shared_group_cache.h
src/util/: debug_log.cpp  debug_log.h  hex.cpp  hex.h  json_builder.cpp  json_builder.h  query_string.cpp  query_string.h
tests/e2e/: CMakeLists.txt  test_full_flow.cpp  test_real_e2e.cpp
tests/integration/: CMakeLists.txt  test_concurrent_clients.cpp  test_fcgi_server_socket.cpp  test_fork_workers.cpp  test_knxd_client.cpp  test_knxd_client_concurrency.cpp  test_read_handler.cpp  test_write_handler.cpp
tests/unit/: CMakeLists.txt  mock_knxd_version.sh  test_address_cache.cpp  test_fcgi_server.cpp  test_group_cache.cpp  test_json_builder.cpp  test_knxd_address.cpp  test_knxd_connector.cpp  test_knxd_protocol.cpp  test_login_handler.cpp  test_query_string.cpp  test_session_store.cpp  test_shared_group_cache.cpp  test_version.cpp
tools/: fcgi-curl.sh  start-knxd-ipt.sh
